# Grazel

./: .bazelignore  .bazelrc  .gitignore  404.html  BUILD.bazel  LICENSE.md  README.MD  WORKSPACE  build.gradle  constants.gradle  gradle.properties  index.html  migration_workflow.mmd  mkdocs.yml  settings.gradle  sitemap.xml  task_graph.mmd
.github/workflows/: ci.yml
architecture/: index.html
bazel_configuration/: index.html
buildsystem/: BUILD.bazel
configuration/: index.html
databinding/: index.html
docs/: bazel_configuration.md  databinding.md  gradle_tasks.md  grazel_extension.md  hybrid_builds.md  index.md  migration_capabilities.md  migration_criteria.md
gradle/: publish-root-config.gradle  publishing.gradle
gradle_tasks/: index.html
grazel-gradle-plugin/: .gitignore  build.gradle  settings.gradle
grazel-gradle-plugin/gradle-scripts/: functional-test.gradle
grazel-gradle-plugin/src/functionalTest/kotlin/com/grab/grazel/: BaseGrazelPluginTest.kt
grazel-gradle-plugin/src/functionalTest/kotlin/com/grab/grazel/hybrid/: HybridDependencySubstitutionTest.kt
grazel-gradle-plugin/src/functionalTest/kotlin/com/grab/grazel/migrate/: AndroidExtensionsTest.kt  BuildVariantTest.kt  SourcePathTest.kt
grazel-gradle-plugin/src/functionalTest/kotlin/com/grab/grazel/util/: Constants.kt
grazel-gradle-plugin/src/main/kotlin/com/grab/grazel/: GrazelExtension.kt  GrazelGradlePlugin.kt
grazel-gradle-plugin/src/main/kotlin/com/grab/grazel/configuration/: AndroidConfiguration.kt  BazelCommonConfiguration.kt  GoogleServicesConfiguration.kt  GrazelConfiguration.kt  KotlinConfiguration.kt  MavenInstallConfiguration.kt
grazel-gradle-plugin/src/main/kotlin/com/grab/grazel/di/: GrazelComponent.kt
grazel-gradle-plugin/src/main/kotlin/com/grab/grazel/dozer/: BazelDependencyAnalytics.kt  DozerUpdate.kt  DozerWorkspaceModifier.kt  TempFileManager.kt  UpdateMavenDependency.kt
grazel-gradle-plugin/src/main/kotlin/com/grab/grazel/extension/: AndroidExtension.kt  BazelCommonExtension.kt  GoogleServicesExtension.kt  KotlinExtension.kt  MavenInstallExtension.kt  RulesExtension.kt
grazel-gradle-plugin/src/main/kotlin/com/grab/grazel/gradle/: BuildVariant.kt  Configuration.kt  GradleProjectInfo.kt  MigrationCriteria.kt  Project.kt  ProjectDependencyGraphBuilder.kt  Repository.kt
grazel-gradle-plugin/src/main/kotlin/com/grab/grazel/hybrid/: ArtifactSearcher.kt  DependencySubstitution.kt  Hybrid.kt
grazel-gradle-plugin/src/main/kotlin/com/grab/grazel/migrate/: BazelFileBuilder.kt  BazelTarget.kt  WorkspaceModifier.kt
grazel-gradle-plugin/src/main/kotlin/com/grab/grazel/util/: Ansi.kt  Constants.kt  FileUtils.kt  LogOutputStream.kt  Project.kt  Property.kt
grazel-gradle-plugin/src/test/kotlin/com/grab/grazel/: GrazelPluginTest.kt
grazel-gradle-plugin/src/test/kotlin/com/grab/grazel/gradle/: DefaultAndroidBuildVariantDataSourceTest.kt  DefaultAndroidVariantDataSourceTest.kt  DefaultConfigurationDataSourceTest.kt  DefaultDependenciesDataSourceTest.kt
grazel-gradle-plugin/src/test/projects/android-project/: .gitignore  README.MD  build.gradle  gradle.properties  settings.gradle
grazel-gradle-plugin/src/test/projects/android-project/android-library/: build.gradle
grazel-gradle-plugin/src/test/projects/android-project/android-library-flavor/: build.gradle
grazel-gradle-plugin/src/test/projects/android-project/app/: build.gradle
grazel-gradle-plugin/src/test/projects/android-project/kotlin-library-flavor1/: build.gradle
grazel-gradle-plugin/src/test/projects/android-project/kotlin-library2/: build.gradle
grazel-gradle-plugin/src/test/projects/hybrid-dependency-substitution/: .gitignore  build.gradle  gradle.properties  settings.gradle
grazel-gradle-plugin/src/test/projects/hybrid-dependency-substitution/android-databinding/: build.gradle
grazel-gradle-plugin/src/test/projects/hybrid-dependency-substitution/android-library/: build.gradle
grazel-gradle-plugin/src/test/projects/hybrid-dependency-substitution/app/: build.gradle
grazel-gradle-plugin/src/test/projects/hybrid-dependency-substitution/tools/: bazel
grazel-gradle-plugin/src/test/projects/hybrid-dependency-substitution/tools/bazel-bin/: bazel-darwin  bazel-k8
grazel-gradle-plugin/src/test/projects/kotlin-library/: build.gradle  settings.gradle
grazel-gradle-plugin/src/test/projects/kotlin-library/lib/: build.gradle
grazel_extension/: index.html
hybrid_builds/: index.html
migration_capabilities/: index.html
migration_criteria/: index.html
sample-android/: BUILD.bazel  build.gradle  google-services.json
sample-android-flavor/: BUILD.bazel  build.gradle
sample-android-flavor/src/flavor1/java/com/grab/grazel/android/flavor/: HelloFlavorMessage.kt
sample-android-flavor/src/flavor1/res/values/: strings.xml
sample-android-flavor/src/flavor2/res/values/: strings.xml
sample-android-flavor/src/main/: AndroidManifest.xml
sample-android-flavor/src/main/java/com/grab/grazel/android/flavor/: BindingAdapter.kt  FlavorActivity.kt
sample-android-flavor/src/main/res/layout/: activity_flavor.xml
sample-android-flavor/src/main/res/values/: strings.xml
sample-android/src/androidTest/: AndroidManifest.xml
sample-android/src/debug/: AndroidManifest.xml
sample-android/src/main/java/com/grab/grazel/android/sample/: MainActivity.kt
sample-android/src/main/res-debug/values/: strings.xml
sample-android/src/main/res-release/values/: strings.xml
sample-android/src/main/res/drawable/: ic_launcher_background.xml
sample-android/src/main/res/drawable-v24/: ic_launcher_foreground.xml
sample-android/src/main/res/layout/: activity_main.xml
sample-android/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
sample-android/src/main/res/values/: colors.xml  strings.xml  styles.xml
sample-kotlin-lib/: BUILD.bazel  build.gradle
sample-lib-flavor1/: BUILD.bazel
sample-lib-flavor2/: BUILD.bazel  build.gradle
search/: search_index.json
(+96 files in other folders)
