load("@grab_bazel_common//tools/build_config:build_config.bzl", "build_config")

build_config(
    name = "sample-android_lib-build-config",
    package_name = "com.grab.grazel.android.sample",
    booleans = {
        "SOME_BOOLEAN": "false",
    },
    ints = {
        "SOME_INT": 0,
        "VERSION_CODE": 1,
    },
    longs = {
        "SOME_LONG": 0,
    },
    strings = {
        "SOME_STRING": "Something",
        "VERSION_NAME": "1.0",
    },
)

load("@grab_bazel_common//tools/res_value:res_value.bzl", "res_value")

res_value(
    name = "sample-android_lib-res-value",
    custom_package = "com.grab.grazel.android.sample.res",
    manifest = "src/debug/AndroidManifest.xml",
    strings = {
        "generated_value": "important-key",
    },
)

load("@grab_bazel_common//tools/custom_res:custom_res.bzl", "custom_res")
load("@grab_bazel_common//tools/kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "sample-android_lib",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/MainActivity.kt",
    ]),
    assets = glob([
        "src/main/assets/assert-file.png",
    ]),
    assets_dir = "src/main/assets",
    custom_package = "com.grab.grazel.android.sample",
    manifest = "src/debug/AndroidManifest.xml",
    resource_files = glob([
        "src/main/res/**",
    ]) + custom_res(
        dir_name = "res-debug",
        resource_files = glob([
            "src/main/res-debug/values/strings.xml",
        ]),
        target = "sample-android_lib",
    ),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":sample-android_lib-build-config",
        ":sample-android_lib-res-value",
        "//:dagger",
        "//:parcelize",
        "//sample-android-flavor",
        "//sample-kotlin-lib",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_constraintlayout_constraintlayout",
    ],
)

load("@grab_bazel_common//tools/custom_res:custom_res.bzl", "custom_res")
load("@tools_android//tools/googleservices:defs.bzl", "google_services_xml")

GOOGLE_SERVICES_XML = google_services_xml(
    package_name = "com.grab.grazel.android.sample",
    google_services_json = "google-services.json",
)

load("@tools_android//tools/crashlytics:defs.bzl", "crashlytics_android_library")

crashlytics_android_library(
    name = "crashlytics_lib",
    package_name = "com.grab.grazel.android.sample",
    build_id = "042cb4d8-56f8-41a0-916a-9da28e94d1ba",
    resource_files = GOOGLE_SERVICES_XML,
)

android_binary(
    name = "sample-android",
    assets = glob([
        "src/main/assets/assert-file.png",
    ]),
    assets_dir = "src/main/assets",
    crunch_png = False,
    custom_package = "com.grab.grazel.android.sample",
    debug_key = "//buildsystem:debug-keystore",
    dex_shards = 5,
    enable_data_binding = True,
    incremental_dexing = False,
    manifest = "src/debug/AndroidManifest.xml",
    manifest_values = {
        "versionCode": "1",
        "versionName": "1.0",
        "minSdkVersion": "16",
        "targetSdkVersion": "29",
        "applicationId": "com.grab.grazel.android.sample",
        "orientation": "portrait",
        "libraryManifestHolder": "value",
    },
    multidex = "native",
    resource_files = glob([
        "src/main/res/**",
    ]) + custom_res(
        dir_name = "res-debug",
        resource_files = glob([
            "src/main/res-debug/values/strings.xml",
        ]),
        target = "sample-android",
    ) + GOOGLE_SERVICES_XML,
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":crashlytics_lib",
        ":sample-android_lib",
        ":sample-android_lib-build-config",
        ":sample-android_lib-res-value",
        "@maven//:androidx_annotation_annotation",
        "@maven//:androidx_databinding_databinding_adapters",
        "@maven//:androidx_databinding_databinding_common",
        "@maven//:androidx_databinding_databinding_runtime",
    ],
)
